# pytorch-sandbox-mech-interp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  task_manifest.json  tasks.json  validate-submission.sh
artifacts/: task1.pt  task2.pt  task3.pt
docs/: DEPLOYMENT_SUMMARY.md  FINAL_STATUS_REPORT.md  TEST_RESULTS.md
mech_interp/: __init__.py  models.py
server/: __init__.py  app.py  gen_art.py  mech_interp_environment.py  model_architectures.py  requirements.txt
tasks/: __init__.py  common.py  graders.py
tasks/task1/: __init__.py  grader.py
tasks/task2/: __init__.py  grader.py
tasks/task3/: __init__.py  grader.py
tasks/task4/: __init__.py  grader.py
tests/: audit_report.py  mock_agent_simulation.py  stress_tests.py  test_app_manifest.py  test_comprehensive.py  test_environment.py  test_integration.py
