# Copyright (c) 2026, Kashyapsinh Gohil
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech_interp"
version = "0.1.0"
description = "PyTorchSandbox mechanistic interpretability benchmark for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "mech_interp.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mech_interp*", "server*", "tasks*"]
exclude = ["tests*", "docs*", "deep report*"]
